--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="aboutme">
         <h1 id="amh" >About me</h1>
         <p id="amp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti id velit cumque cupiditate explicabo deserunt delectus sed ut nesciunt eligendi, maxime beatae accusamus rerum, nam magni alias, molestias ipsum facere.</p>
-        <a id="ama" href="#">Learn More --></a>
+        <a id="ama" href="#">Learn More</a>
     </div>
     </div>
 
@@ -118,7 +118,7 @@
       <footer>
 
 
-       <p class="cr">© 2021 – 2021 Janković Boris | All Rights Reserved</p>
+       <p class="cr">© 2021 - 2022 Janković Boris | All Rights Reserved</p>
 
       </footer>
     
