--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
     <div class="center">
     <div id="aboutme">
-        <h1 id="amh" >About me</h1>
-        <p id="amp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti id velit cumque cupiditate explicabo deserunt delectus sed ut nesciunt eligendi, maxime beatae accusamus rerum, nam magni alias, molestias ipsum facere.</p>
+        <h1 id="amh" >About Me</h1>
+        <p id="amp">I will enhance your company web site's
+             usefulness as a marketing channel by developing it as a gathering 
+             place for those within your niche disability
+             audience who seek opportunities to discuss issues which are important to them.</p>
         <a id="ama" href="#">Learn More</a>
     </div>
     </div>
@@ -45,8 +48,9 @@
     <div class="center">
         <div id="aboutme2">
             <h1 id="amh2" >My Work</h1>
-            <p id="amp2">If you want to see some of my works you can check links below. This WebSites below are only HTML, CSS & JS projects.
-                More you can see on my GitHub whitch you can find on About Me page.
+            <p id="amp2">If you want to see some of my works you can check links below.
+                 This WebSites below are only HTML, CSS & JS projects.
+                 More you can see on my GitHub which you can find on About Me page.
             </p>
         </div>
         </div>
@@ -58,10 +62,11 @@
   
    <br><br><br>
    <hr> 
-   <br><br><br>
+
 
   
-
+<div class="center">
+   <div class="links">
     <div class="center">
     <div class="box">
         <h1 class="linkh">Lucky Six</h1>
@@ -70,9 +75,9 @@
     </a>
     </div>
     </div>
+
     
-    <br><br>
-    <br><br>
+ 
 
     <div class="center">
         <div class="box">
@@ -83,8 +88,7 @@
         </div>
         </div>
 
-   <br><br>
-   <br><br>
+
 
    <div class="center">
     <div class="box">
@@ -95,8 +99,6 @@
     </div>
     </div>
 
-<br><br>
-<br><br>
 
 <div class="center">
     <div class="box">
@@ -106,6 +108,8 @@
     </a>
     </div>
     </div>
+</div>
+</div>
 
 <br><br>
 <br><br>
