--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
 
 
 
+  
    <br><br>
-   <br><br>
-   <div class="center">
-    <a id="button" onclick="toggle()">Stop/Start Effects</a>
-     </div>
+   
    <br><br><br><br>
 
     <div class="center">
@@ -64,6 +62,17 @@
    <hr> 
 
 
+
+   <div class="center">
+    <div class="links">
+     <div class="center">
+     <div class="box">
+         <h1 class="linkh">Roulette</h1>
+         <a href="https://rulet.vercel.app" target="_blank">
+         <img class="linkimg" src="rimg.jpg">
+     </a>
+     </div>
+     </div>
   
 <div class="center">
    <div class="links">
@@ -71,7 +80,7 @@
     <div class="box">
         <h1 class="linkh">Lucky Six</h1>
         <a href="https://luckysix.vercel.app" target="_blank">
-        <img id="img1" class="linkimg" src="site1.png">
+        <img class="linkimg" src="site1.png">
     </a>
     </div>
     </div>
@@ -83,7 +92,7 @@
         <div class="box">
             <h1 class="linkh">A.I.</h1>
             <a href="https://vestacka-inteligencija.vercel.app" target="_blank">
-            <img id="img2" class="linkimg" src="site2.jpg">
+            <img class="linkimg" src="site2.jpg">
         </a>
         </div>
         </div>
@@ -94,22 +103,13 @@
     <div class="box">
         <h1 class="linkh">Coming Soon...</h1>
         <a href="https://vestacka-inteligencija.vercel.app" target="_blank">
-        <img id="img3" class="linkimg" src="site2.jpg">
+        <img class="linkimg" src="site2.jpg">
     </a>
     </div>
     </div>
 
 
-<div class="center">
-    <div class="box">
-        <h1 class="linkh">Coming Soon...</h1>
-        <a href="https://vestacka-inteligencija.vercel.app" target="_blank">
-        <img id="img4" class="linkimg" src="site2.jpg">
-    </a>
-    </div>
-    </div>
-</div>
-</div>
+
 
 <br><br>
 <br><br>
@@ -117,6 +117,7 @@
 
 
 
+     <br><br>
    
 
       <footer>
