--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
         
     </header>
 
-
-
-
-   
-
-
-
-  
    <br><br>
    
    <br><br><br><br>
@@ -34,7 +26,7 @@
              usefulness as a marketing channel by developing it as a gathering 
              place for those within your niche disability
              audience who seek opportunities to discuss issues which are important to them.</p>
-        <a id="ama" href="#">Learn More</a>
+        <a id="ama" href="aboutme.html">Learn More</a>
     </div>
     </div>
 
