--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     <div class="links">
      <div class="center">
      <div class="box">
+         <h1 class="linkh">Virus Rush</h1>
+         <a href="https://virusrush.vercel.app" target="_blank">
+         <img class="linkimg" src="virus.png">
+     </a>
+     </div>
+     </div>
+
+   <div class="center">
+    <div class="links">
+     <div class="center">
+     <div class="box">
          <h1 class="linkh">ChatBot</h1>
          <a href="https://chat-bot-nine.vercel.app" target="_blank">
          <img class="linkimg" src="chat.jpg">
