--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     <div class="links">
      <div class="center">
      <div class="box">
+         <h1 class="linkh">TicTacToe</h1>
+         <a href="https://xo-ebon.vercel.app/" target="_blank">
+         <img class="linkimg" src="xo.png">
+     </a>
+     </div>
+     </div>
+
+   <div class="center">
+    <div class="links">
+     <div class="center">
+     <div class="box">
          <h1 class="linkh">BitClicker</h1>
          <a href="https://bitclicker.vercel.app" target="_blank">
          <img class="linkimg" src="bitcoin.png">
