--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
     <div class="links">
      <div class="center">
      <div class="box">
+         <h1 class="linkh">Win10CV</h1>
+         <a href="https://win10cv.vercel.app/" target="_blank">
+         <img class="linkimg" src="win10.png">
+     </a>
+     </div>
+     </div>
+
+     <div class="center">
+        <div class="links">
+         <div class="center">
+         <div class="box">
+             <h1 class="linkh">Vešala</h1>
+             <a href="https://vesala.vercel.app/" target="_blank">
+             <img class="linkimg" src="hangman.png">
+         </a>
+         </div>
+         </div>
+
+
+
+
+   <div class="center">
+    <div class="links">
+     <div class="center">
+     <div class="box">
          <h1 class="linkh">BlackJack</h1>
          <a href="https://simpleblackjack.vercel.app/" target="_blank">
          <img class="linkimg" src="bj.png">
