--- a/aboutme.html
+++ b/aboutme.html
@@ -26,28 +26,16 @@
 
    <div class="center">
     <div id="aboutme">
-        <h1 id="amh" >About Me</h1>
-        <p id="amp">I will enhance your company web site's
-             usefulness as a marketing channel by developing it as a gathering 
-             place for those within your niche disability
-             audience who seek opportunities to discuss issues which are important to them.</p>
+        <h1 id="amh" >!!!</h1>
+        <p id="amp">Website is not done yet.
+
+        </p>
     </div>
     </div>
 
 
     
 
-    <br><br>
-
-    <div class="center">
-        <div id="aboutme2">
-            <h1 id="amh" >About Me</h1>
-            <p id="amp">I will enhance your company web site's
-                 usefulness as a marketing channel by developing it as a gathering 
-                 place for those within your niche disability
-                 audience who seek opportunities to discuss issues which are important to them.</p>
-        </div>
-        </div>
    
    <br><br>
    <br><br>
