--- a/index.html
+++ b/index.html
@@ -224,8 +224,15 @@
 
 
 
-
 <br><br>
+
+
+<footer>
+
+
+    <p class="cr">© 2021 - 2022 Janković Boris | All Rights Reserved</p>
+
+   </footer>
 
     
 </body>
