--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
 
   
-    <body onload="setTimeout(loadf(), 3000)">
+    <body onload="loadf()">
     <script src="main.js"></script>
 </body>
 </html>
