--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <li style="--i:0.2s"><a href="mailto:jankoovicbooris@gmail.com" target="_blank">
                     <img class="icon" src="icons8-gmail-512.png">
                       </a></li>
-                  <li style="--i:0.3s"><a href="+381601675757" target="_blank">
+                  <li style="--i:0.3s"><a href="tel:+381601675757" target="_blank">
                       <img class="icon" src="icons8-phone-100.png">
                       </a></li>
                
